data/derived/comb/progs/unify/prog1253.ml.out
Characters 337-338:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int list -> int * int list -> int * int list
       but an expression was expected of type
         int list -> int * int list -> int list
       Type int * int list is not compatible with type int list 
